fix: correct style shifting errors as window grows
modify style.css to switch from % background shape
sizing to a fixed value so it remains constant
even if screen height changes, removed padding
adjustments for profile image title text and used
fixed positioning to prevent it from shifting,
adjusted about me section text and its container's
max width, affixed social icons in 1024 and 1920
media queries to the bottom right of about me
container corner even on resize, and centered the
footer text at all media query sizes.

--- a/src/style.css
+++ b/src/style.css
@@ -15,9 +15,11 @@ body {
 }
 .header-bg {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   /* increase this to make the blue shape cover more area */
-  height: 50%;
+  height: 400px;
   background-color: #0891b2;
   transform-origin: top left;
   transform: skewY(-30deg);
@@ -230,15 +232,16 @@ svg {
 @media (min-width: 768px) {
   .header-bg {
     /* increase this to make the blue shape cover more area */
-    height: 40%;
+    height: 420px;
     transform: skewY(-15deg);
   }
   .header-content {
     display: block;
   }
   .profile-overlay {
+    text-align: left;
     top: 50px;
-    padding-left: 30px;
+    left: 282px;
   }
   /* targets the <picture> element */
   .profile-image-top {
@@ -293,6 +296,7 @@ svg {
 
   footer {
     display: flex;
+    justify-content: center;
     background-color: #0891b2;
     padding: 2rem;
     padding-bottom: 0rem;
@@ -321,15 +325,16 @@ svg {
 @media (min-width: 1024px) {
   .header-bg {
     /* increase this to make the blue shape cover more area */
-    height: 50%;
+    height: 540px;
     transform: skewY(-15deg);
   }
   .header-content {
     display: block;
   }
   .profile-overlay {
+    text-align: left;
     top: 50px;
-    padding-right: 525px;
+    left: 150px;
   }
   /* targets the <picture> element */
   .profile-image-top {
@@ -349,9 +354,11 @@ svg {
   }
   .about-me {
     display: block;
+    /* make the box a positioning context for the social-icons */
+    position: relative;
     align-items: unset;
     background-color: white;
-    max-width: 1200px;
+    max-width: 650px;
     height: 375px;
     margin-top: 50px;
     margin-right: 75px;
@@ -366,11 +373,13 @@ svg {
   }
   .social-icons {
     display: flex;
-    gap: 15px;
     justify-content: center;
-    margin-top: 3.5rem;
-    margin-left: 375px;
-    width: 25px;
+    position: absolute;
+    bottom: 25px;
+    right: 80px;
+    margin: 0;
+    width: auto;
+    gap: 15px;
   }
 
   .main-content {
@@ -390,6 +399,7 @@ svg {
 
   footer {
     display: flex;
+    justify-content: center;
     background-color: #0891b2;
     padding: 2rem;
     padding-bottom: 0rem;
@@ -419,15 +429,16 @@ svg {
 @media (min-width: 1920px) {
   .header-bg {
     /* increase this to make the blue shape cover more area */
-    height: 80%;
-    transform: skewY(-10deg);
+    height: 860px;
+    transform: skewY(-12deg);
   }
   .header-content {
     display: block;
   }
   .profile-overlay {
-    top: 90px;
-    padding-right: 1075px;
+    text-align: left;
+    top: 80px;
+    left: 210px;
     font-size: 3rem;
   }
   /* targets the <picture> element */
@@ -451,9 +462,11 @@ svg {
   }
   .about-me {
     display: block;
+    /* make the box a positioning context for the social-icons */
+    position: relative;
     align-items: unset;
     background-color: white;
-    max-width: 1100px;
+    max-width: 1400px;
     height: 625px;
     margin-top: 70px;
     margin-right: 75px;
@@ -468,17 +481,19 @@ svg {
   }
   .about-me p {
     padding-left: 3rem;
-    max-width: 800px;
+    max-width: 1200px;
     font-size: 1.75rem;
     line-height: 2;
   }
   .social-icons {
     display: flex;
-    gap: 30px;
     justify-content: center;
-    margin-top: 3rem;
-    margin-left: 900px;
-    width: 45px;
+    position: absolute;
+    bottom: 50px;
+    right: 150px;
+    margin: 0;
+    width: 60px;
+    gap: 35px;
   }
 
   .main-content {
@@ -514,6 +529,7 @@ svg {
 
   footer {
     display: flex;
+    justify-content: center;
     background-color: #0891b2;
     padding: 2rem;
     padding-left: 4rem;
